--- a/Assignments/midterm/spotify_data_grabber.ipynb
+++ b/Assignments/midterm/spotify_data_grabber.ipynb
@@ -28,7 +28,7 @@
         "from bs4 import BeautifulSoup as bs\n",
         "from google.colab import drive"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -36,6 +36,7 @@
       "source": [
         "countries = {\"ar\": \"Argentina\",\n",
         "             \"au\": \"Australia\",\n",
+        "             \"at\": \"Austria\",\n",
         "             \"by\": \"Belarus\",\n",
         "             \"be\": \"Belgium\",\n",
         "             \"bo\": \"Bolivia\",\n",
@@ -103,14 +104,14 @@
         "             \"ua\": \"Ukraine\",\n",
         "             \"gb\": \"United Kingdom\",\n",
         "             \"uy\": \"Uruguay\",\n",
-        "             \"us\": \"United States of America\",\n",
+        "             \"us\": \"United States\",\n",
         "             \"vn\": \"Vietnam\"\n",
         "             }"
       ],
       "metadata": {
         "id": "bjVUHGIfv04G"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -146,7 +147,7 @@
       "metadata": {
         "id": "7uM2OW8gkk6P"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -162,7 +163,7 @@
         "id": "lsLIIp_GmrYI",
         "outputId": "6624bb8c-3c0b-437e-8c48-3281fb58b98d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,7 +509,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "199d1922-bff7-4f48-ce8a-cc30d7077621"
+        "outputId": "95bc00f7-8b50-4e7f-cf49-5040d7dec6e5"
       },
       "source": [
         "spotify_data = pd.DataFrame()\n",
@@ -521,7 +522,7 @@
         "  print(\"Total Rows: \" + str(spotify_data.shape[0]) + \"\\n\")\n",
         "  time.sleep(1)"
       ],
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,350 +538,355 @@
             "Read 200 rows\n",
             "Total Rows: 400\n",
             "\n",
+            "Country Name: Austria\n",
+            "Country Code: at\n",
+            "Read 200 rows\n",
+            "Total Rows: 600\n",
+            "\n",
             "Country Name: Belarus\n",
             "Country Code: by\n",
             "Read 200 rows\n",
-            "Total Rows: 600\n",
+            "Total Rows: 800\n",
             "\n",
             "Country Name: Belgium\n",
             "Country Code: be\n",
             "Read 200 rows\n",
-            "Total Rows: 800\n",
+            "Total Rows: 1000\n",
             "\n",
             "Country Name: Bolivia\n",
             "Country Code: bo\n",
             "Read 200 rows\n",
-            "Total Rows: 1000\n",
+            "Total Rows: 1200\n",
             "\n",
             "Country Name: Brazil\n",
             "Country Code: br\n",
             "Read 200 rows\n",
-            "Total Rows: 1200\n",
+            "Total Rows: 1400\n",
             "\n",
             "Country Name: Bulgaria\n",
             "Country Code: bg\n",
             "Read 200 rows\n",
-            "Total Rows: 1400\n",
+            "Total Rows: 1600\n",
             "\n",
             "Country Name: Canada\n",
             "Country Code: ca\n",
             "Read 200 rows\n",
-            "Total Rows: 1600\n",
+            "Total Rows: 1800\n",
             "\n",
             "Country Name: Chile\n",
             "Country Code: cl\n",
             "Read 200 rows\n",
-            "Total Rows: 1800\n",
+            "Total Rows: 2000\n",
             "\n",
             "Country Name: Colombia\n",
             "Country Code: co\n",
             "Read 200 rows\n",
-            "Total Rows: 2000\n",
+            "Total Rows: 2200\n",
             "\n",
             "Country Name: Costa Rica\n",
             "Country Code: cr\n",
             "Read 200 rows\n",
-            "Total Rows: 2200\n",
+            "Total Rows: 2400\n",
             "\n",
             "Country Name: Cyprus\n",
             "Country Code: cy\n",
             "Read 200 rows\n",
-            "Total Rows: 2400\n",
+            "Total Rows: 2600\n",
             "\n",
             "Country Name: Czech Republic\n",
             "Country Code: cz\n",
             "Read 200 rows\n",
-            "Total Rows: 2600\n",
+            "Total Rows: 2800\n",
             "\n",
             "Country Name: Denmark\n",
             "Country Code: dk\n",
             "Read 200 rows\n",
-            "Total Rows: 2800\n",
+            "Total Rows: 3000\n",
             "\n",
             "Country Name: Dominican Republic\n",
             "Country Code: do\n",
             "Read 200 rows\n",
-            "Total Rows: 3000\n",
+            "Total Rows: 3200\n",
             "\n",
             "Country Name: Ecuador\n",
             "Country Code: ec\n",
             "Read 200 rows\n",
-            "Total Rows: 3200\n",
+            "Total Rows: 3400\n",
             "\n",
             "Country Name: Egypt\n",
             "Country Code: eg\n",
             "Read 200 rows\n",
-            "Total Rows: 3400\n",
+            "Total Rows: 3600\n",
             "\n",
             "Country Name: El Salvador\n",
             "Country Code: sv\n",
             "Read 200 rows\n",
-            "Total Rows: 3600\n",
+            "Total Rows: 3800\n",
             "\n",
             "Country Name: Estonia\n",
             "Country Code: ee\n",
             "Read 200 rows\n",
-            "Total Rows: 3800\n",
+            "Total Rows: 4000\n",
             "\n",
             "Country Name: Finland\n",
             "Country Code: fi\n",
             "Read 200 rows\n",
-            "Total Rows: 4000\n",
+            "Total Rows: 4200\n",
             "\n",
             "Country Name: France\n",
             "Country Code: fr\n",
             "Read 200 rows\n",
-            "Total Rows: 4200\n",
+            "Total Rows: 4400\n",
             "\n",
             "Country Name: Germany\n",
             "Country Code: de\n",
             "Read 200 rows\n",
-            "Total Rows: 4400\n",
+            "Total Rows: 4600\n",
             "\n",
             "Country Name: Greece\n",
             "Country Code: gr\n",
             "Read 200 rows\n",
-            "Total Rows: 4600\n",
+            "Total Rows: 4800\n",
             "\n",
             "Country Name: Guatemala\n",
             "Country Code: gt\n",
             "Read 200 rows\n",
-            "Total Rows: 4800\n",
+            "Total Rows: 5000\n",
             "\n",
             "Country Name: Honduras\n",
             "Country Code: hn\n",
             "Read 200 rows\n",
-            "Total Rows: 5000\n",
+            "Total Rows: 5200\n",
             "\n",
             "Country Name: Hong Kong\n",
             "Country Code: hk\n",
             "Read 200 rows\n",
-            "Total Rows: 5200\n",
+            "Total Rows: 5400\n",
             "\n",
             "Country Name: Hungary\n",
             "Country Code: hu\n",
             "Read 200 rows\n",
-            "Total Rows: 5400\n",
+            "Total Rows: 5600\n",
             "\n",
             "Country Name: Iceland\n",
             "Country Code: is\n",
             "Read 200 rows\n",
-            "Total Rows: 5600\n",
+            "Total Rows: 5800\n",
             "\n",
             "Country Name: India\n",
             "Country Code: in\n",
             "Read 200 rows\n",
-            "Total Rows: 5800\n",
+            "Total Rows: 6000\n",
             "\n",
             "Country Name: Indonesia\n",
             "Country Code: id\n",
             "Read 200 rows\n",
-            "Total Rows: 6000\n",
+            "Total Rows: 6200\n",
             "\n",
             "Country Name: Ireland\n",
             "Country Code: ie\n",
             "Read 200 rows\n",
-            "Total Rows: 6200\n",
+            "Total Rows: 6400\n",
             "\n",
             "Country Name: Israel\n",
             "Country Code: il\n",
             "Read 200 rows\n",
-            "Total Rows: 6400\n",
+            "Total Rows: 6600\n",
             "\n",
             "Country Name: Italy\n",
             "Country Code: it\n",
             "Read 200 rows\n",
-            "Total Rows: 6600\n",
+            "Total Rows: 6800\n",
             "\n",
             "Country Name: Japan\n",
             "Country Code: jp\n",
             "Read 200 rows\n",
-            "Total Rows: 6800\n",
+            "Total Rows: 7000\n",
             "\n",
             "Country Name: Kazakhstan\n",
             "Country Code: kz\n",
             "Read 200 rows\n",
-            "Total Rows: 7000\n",
+            "Total Rows: 7200\n",
             "\n",
             "Country Name: Latvia\n",
             "Country Code: lv\n",
             "Read 200 rows\n",
-            "Total Rows: 7200\n",
+            "Total Rows: 7400\n",
             "\n",
             "Country Name: Lithuania\n",
             "Country Code: lt\n",
             "Read 200 rows\n",
-            "Total Rows: 7400\n",
+            "Total Rows: 7600\n",
             "\n",
             "Country Name: Luxembourg\n",
             "Country Code: lu\n",
             "Read 200 rows\n",
-            "Total Rows: 7600\n",
+            "Total Rows: 7800\n",
             "\n",
             "Country Name: Malaysia\n",
             "Country Code: my\n",
             "Read 200 rows\n",
-            "Total Rows: 7800\n",
+            "Total Rows: 8000\n",
             "\n",
             "Country Name: Mexico\n",
             "Country Code: mx\n",
             "Read 200 rows\n",
-            "Total Rows: 8000\n",
+            "Total Rows: 8200\n",
             "\n",
             "Country Name: Morocco\n",
             "Country Code: ma\n",
             "Read 200 rows\n",
-            "Total Rows: 8200\n",
+            "Total Rows: 8400\n",
             "\n",
             "Country Name: Netherlands\n",
             "Country Code: nl\n",
             "Read 200 rows\n",
-            "Total Rows: 8400\n",
+            "Total Rows: 8600\n",
             "\n",
             "Country Name: New Zealand\n",
             "Country Code: nz\n",
             "Read 200 rows\n",
-            "Total Rows: 8600\n",
+            "Total Rows: 8800\n",
             "\n",
             "Country Name: Nicaragua\n",
             "Country Code: ni\n",
             "Read 200 rows\n",
-            "Total Rows: 8800\n",
+            "Total Rows: 9000\n",
             "\n",
             "Country Name: Nigeria\n",
             "Country Code: ng\n",
             "Read 200 rows\n",
-            "Total Rows: 9000\n",
+            "Total Rows: 9200\n",
             "\n",
             "Country Name: Norway\n",
             "Country Code: no\n",
             "Read 200 rows\n",
-            "Total Rows: 9200\n",
+            "Total Rows: 9400\n",
             "\n",
             "Country Name: Panama\n",
             "Country Code: pa\n",
             "Read 200 rows\n",
-            "Total Rows: 9400\n",
+            "Total Rows: 9600\n",
             "\n",
             "Country Name: Paraguay\n",
             "Country Code: py\n",
             "Read 200 rows\n",
-            "Total Rows: 9600\n",
+            "Total Rows: 9800\n",
             "\n",
             "Country Name: Peru\n",
             "Country Code: pe\n",
             "Read 200 rows\n",
-            "Total Rows: 9800\n",
+            "Total Rows: 10000\n",
             "\n",
             "Country Name: Philippines\n",
             "Country Code: ph\n",
             "Read 200 rows\n",
-            "Total Rows: 10000\n",
+            "Total Rows: 10200\n",
             "\n",
             "Country Name: Poland\n",
             "Country Code: pl\n",
             "Read 200 rows\n",
-            "Total Rows: 10200\n",
+            "Total Rows: 10400\n",
             "\n",
             "Country Name: Portugal\n",
             "Country Code: pt\n",
             "Read 200 rows\n",
-            "Total Rows: 10400\n",
+            "Total Rows: 10600\n",
             "\n",
             "Country Name: Romania\n",
             "Country Code: ro\n",
             "Read 200 rows\n",
-            "Total Rows: 10600\n",
+            "Total Rows: 10800\n",
             "\n",
             "Country Name: Russia\n",
             "Country Code: ru\n",
             "Read 200 rows\n",
-            "Total Rows: 10800\n",
+            "Total Rows: 11000\n",
             "\n",
             "Country Name: Saudi Arabia\n",
             "Country Code: sa\n",
             "Read 200 rows\n",
-            "Total Rows: 11000\n",
+            "Total Rows: 11200\n",
             "\n",
             "Country Name: Singapore\n",
             "Country Code: sg\n",
             "Read 200 rows\n",
-            "Total Rows: 11200\n",
+            "Total Rows: 11400\n",
             "\n",
             "Country Name: Slovakia\n",
             "Country Code: sk\n",
             "Read 200 rows\n",
-            "Total Rows: 11400\n",
+            "Total Rows: 11600\n",
             "\n",
             "Country Name: South Africa\n",
             "Country Code: za\n",
             "Read 200 rows\n",
-            "Total Rows: 11600\n",
+            "Total Rows: 11800\n",
             "\n",
             "Country Name: South Korea\n",
             "Country Code: kr\n",
             "Read 200 rows\n",
-            "Total Rows: 11800\n",
+            "Total Rows: 12000\n",
             "\n",
             "Country Name: Spain\n",
             "Country Code: es\n",
             "Read 200 rows\n",
-            "Total Rows: 12000\n",
+            "Total Rows: 12200\n",
             "\n",
             "Country Name: Sweden\n",
             "Country Code: se\n",
             "Read 200 rows\n",
-            "Total Rows: 12200\n",
+            "Total Rows: 12400\n",
             "\n",
             "Country Name: Switzerland\n",
             "Country Code: ch\n",
             "Read 200 rows\n",
-            "Total Rows: 12400\n",
+            "Total Rows: 12600\n",
             "\n",
             "Country Name: Taiwan\n",
             "Country Code: tw\n",
             "Read 200 rows\n",
-            "Total Rows: 12600\n",
+            "Total Rows: 12800\n",
             "\n",
             "Country Name: Thailand\n",
             "Country Code: th\n",
             "Read 200 rows\n",
-            "Total Rows: 12800\n",
+            "Total Rows: 13000\n",
             "\n",
             "Country Name: Turkey\n",
             "Country Code: tr\n",
             "Read 200 rows\n",
-            "Total Rows: 13000\n",
+            "Total Rows: 13200\n",
             "\n",
             "Country Name: United Arab Emirates\n",
             "Country Code: ae\n",
             "Read 200 rows\n",
-            "Total Rows: 13200\n",
+            "Total Rows: 13400\n",
             "\n",
             "Country Name: Ukraine\n",
             "Country Code: ua\n",
             "Read 200 rows\n",
-            "Total Rows: 13400\n",
+            "Total Rows: 13600\n",
             "\n",
             "Country Name: United Kingdom\n",
             "Country Code: gb\n",
             "Read 200 rows\n",
-            "Total Rows: 13600\n",
+            "Total Rows: 13800\n",
             "\n",
             "Country Name: Uruguay\n",
             "Country Code: uy\n",
             "Read 200 rows\n",
-            "Total Rows: 13800\n",
+            "Total Rows: 14000\n",
             "\n",
-            "Country Name: United States of America\n",
+            "Country Name: United States\n",
             "Country Code: us\n",
             "Read 200 rows\n",
-            "Total Rows: 14000\n",
+            "Total Rows: 14200\n",
             "\n",
             "Country Name: Vietnam\n",
             "Country Code: vn\n",
             "Read 200 rows\n",
-            "Total Rows: 14200\n",
+            "Total Rows: 14400\n",
             "\n"
           ]
         }
@@ -899,7 +905,7 @@
         "id": "AUOV6hvqrgfi",
         "outputId": "d902fc93-9cb7-49aa-c488-681200f26d9a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1245,19 +1251,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aeb23f43-15f5-461f-c190-cd7eec5ba7bc"
+        "outputId": "e3a9fced-8b51-46c4-dd75-b6acceeb255b"
       },
       "source": [
         "drive.mount('/drive')\n",
         "spotify_data.to_csv('/drive/My Drive/JSC370 Data/spotify_data_weekly.csv', encoding = 'utf-8', index = False)"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /drive; to attempt to forcibly remount, call drive.mount(\"/drive\", force_remount=True).\n"
+            "Mounted at /drive\n"
           ]
         }
       ]
